fixed nav bar and spacing issues

--- a/homework/zynth/style.css
+++ b/homework/zynth/style.css
@@ -19,18 +19,25 @@ body{
  
 }
 header {
+  
+  
   text-align: center;
   align-items: center;
   justify-content:center;
+  
 }
 
 
-.logo {
-  margin: 65.8px 0 auto; /* Center the logo horizontally */
+.homebutton {
+  
+  padding-top: 65.8px; 
+  margin:auto; /* Center the logo horizontally */
   width: 337.70px;
+  
 }
 
 a {
+  margin: auto;
     text-decoration:none;
     color: #777;
     font-family: gotham;
@@ -43,12 +50,12 @@ a {
   
   z-index: 5;
   list-style: none;
-  
- 
+  padding: 40.4976 ;
+ width: fit-content;
   display: flex;
   align-items: center; /* Vertically center the text within the list items */
-  justify-content: center;
-  padding: 32.1576px ;
+  justify-content:center;
+  margin: auto;
 }
 
 #navbar li {
@@ -163,7 +170,7 @@ a {
 
   .empty{
     display: none;
-    border:solid green;
+    
 
     
     width:10%;
@@ -195,6 +202,9 @@ a {
     text-align: center;
 align-items: center;
 color: #fff;
+font-size: 21.4356px;
+font-family: gothamlight, Arial, Helvetica, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
   }
   
 }
@@ -208,6 +218,7 @@ color: #fff;
   height: fit-content;
   margin: auto;
   width: 75%;
+  padding-top: 40.4976px;
 }
 
 
@@ -306,7 +317,7 @@ box-shadow: 0 0 20px 5px #000;
 
 
 .description-item h1{
-  font-family: avant,  Arial, Helvetica, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+  font-family: avant, Arial, Helvetica, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
   font-size: 56.116px;
 line-height: 50px;
 margin-bottom: 25px;
@@ -399,7 +410,7 @@ margin-bottom: 25px;
 
 
 .gallery-nav {
-  border: solid green;
+ 
   bottom: -15px;
   display: flex;
   justify-content: center;
@@ -457,7 +468,7 @@ color: #fff;
 }
 
 .twitchwrap{
-  border: solid white;
+  
   height: 100vh;
   display: flex;
   flex-direction: row;
@@ -471,7 +482,14 @@ color: #fff;
   flex-wrap: wrap;
 }
 
- /*
+.twitchwrap p {
+
+  font-family: gotham, Arial, Helvetica, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 21.4356px;
+}
+
+
+
 .guideline {
   position: fixed;
   height: 100%;
@@ -479,7 +497,7 @@ color: #fff;
   background-color: white;
 }
 
-
+/*
 .vertical-center {
   left: 50%;
   transform: translateX(-50%);
